name:
  tapecart-browser
version:
  1.3
synopsis:
  Simple browser and loader for the tapecart
description:
  Text here
homepage:
  https://github.com/alexkazik/tapecart-browser
license:
  BSD3
license-file:
  LICENSE
author:
  ALeX Kazik
maintainer:
  alex@kazik.de
copyright:
  2017 ALeX Kazik
category:
  Compilers/Interpreters
build-type:
  Simple
cabal-version:
  >= 1.10

executable tapecart-browser
  default-language:
    Haskell2010
  hs-source-dirs:
    src
  ghc-options: {
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N
  }
  main-is:
    Main.hs
  other-modules: {
    Dir
    DirConverterAsm
    DirDisplayAsm
    Font
    Input
    InputAsm
    LaunchAsm
    LoadAsm
    Macros
    MathAsm
    Paths_tapecart_browser
    Sprites
    Tapecart
    TapecartAsm
  }
  build-depends:
    -- assembler
    { asm-c64 == 0.5.*
    -- other resources
    , base
    , base64-bytestring
    , bytestring
    , bzlib
    , directory
    , heredoc
    , text
    , vector
    }
  default-extensions: {
    BinaryLiterals
    OverloadedStrings
    QuasiQuotes
    TemplateHaskell
  }
